<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/my_account">
            <menu>
                <item
                    android:id="@+id/profile"
                    android:icon="@drawable/ic_person"
                    android:title="@string/my_profile" />
                <item
                    android:id="@+id/rewards"
                    android:icon="@drawable/ic_rewards"
                    android:title="@string/my_rewards" />
                <item
                    android:id="@+id/orders"
                    android:icon="@drawable/ic_shopping"
                    android:title="@string/my_orders" />
                <item
                    android:id="@+id/notif"
                    android:icon="@drawable/ic_notifications"
                    android:title="My Notification" />

            </menu>
        </item>

        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contact_us" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/favourite_zone">
            <menu>


                <item

                    android:icon="@drawable/ic_error"
                    android:title="Privacy Policy" />


            </menu>
        </item>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>