<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SendOTPActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_paper_plane"
            android:layout_width="130dp"
            android:layout_height="130dp"/>

        <TextView
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"

            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="14sp"
            android:text="We will send you an One Time Password on this mobile number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="14sp"
            android:text="@string/enter_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/_84"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

<!--            <com.hbb20.CountryCodePicker-->
<!--                android:id="@+id/ccp"-->
<!--                android:layout_width="115dp"-->
<!--                android:layout_height="43dp"-->
<!--                android:layout_marginStart="16dp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toStartOf="@+id/t1"-->
<!--                app:layout_constraintHorizontal_bias="0.73"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintVertical_bias="0.332" />-->

            <EditText
                android:id="@+id/inputMobile"
                android:hint=" 1234567890"
                android:background="@null"
                android:imeOptions="actionDone"
                android:textSize="18sp"
                android:textStyle="bold"
                android:importantForAutofill="no"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

        </LinearLayout>

        <View
            android:layout_marginTop="8dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:background="#808081"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttonGetOtp"
                android:text="@string/get_otp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/bg_button"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

        </FrameLayout>


    </LinearLayout>

</ScrollView>



































    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    tools:context=".UI.SendOTPActivity">-->

    <!--    <com.hbb20.CountryCodePicker-->
    <!--        android:id="@+id/icc"-->
    <!--        android:layout_width="115dp"-->
    <!--        android:layout_height="43dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/ed1"-->
    <!--        app:layout_constraintHorizontal_bias="0.73"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.332" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/ed1"-->
    <!--        android:layout_width="200dp"-->
    <!--        android:layout_height="46dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="Enter Mobile"-->
    <!--        android:inputType="textPersonName"-->
    <!--        android:textSize="20sp"-->
    <!--        android:textStyle="bold"-->
    <!--        android:layout_marginRight="15dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/icc"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.332" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btn1"-->
    <!--        android:layout_width="171dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:text="Get OTP"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.455" />-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->



